@@ -26,6 +26,7 @@
 package org.niis.xroad.serverconf.impl;
 
 import ee.ria.xroad.common.CodedException;
+import ee.ria.xroad.common.SystemProperties;
 import ee.ria.xroad.common.conf.InternalSSLKey;
 import ee.ria.xroad.common.db.TransactionCallback;
 import ee.ria.xroad.common.identifier.ClientId;
@@ -50,8 +51,11 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.hibernate.Session;
 import org.hibernate.SharedSessionContract;
+import org.niis.xroad.common.CostType;
+import org.niis.xroad.common.CostTypePrioritizer;
 import org.niis.xroad.globalconf.GlobalConfProvider;
 import org.niis.xroad.serverconf.IsAuthentication;
 import org.niis.xroad.serverconf.ServerConfProvider;
@@ -83,7 +87,11 @@ import org.niis.xroad.serverconf.model.Service;
 import org.niis.xroad.serverconf.model.ServiceDescription;
 import org.niis.xroad.serverconf.model.TimestampingService;
 
-import java.net.URI;
+import java.io.IOException;
+import java.security.KeyStoreException;
+import java.security.NoSuchAlgorithmException;
+import java.security.UnrecoverableKeyException;
+import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.List;
@@ -301,7 +309,7 @@ public class ServerConfImpl implements ServerConfProvider {
     }
 
     @Override
-    public List<X509Certificate> getIsCerts(ClientId clientId) throws Exception {
+    public List<X509Certificate> getIsCerts(ClientId clientId) {
         return tx(session -> CertificateMapper.get().toTargets(clientDao.getIsCerts(session, clientId)).stream()
                 .map(Certificate::getData)
                 .map(CryptoUtils::readCertificate)
@@ -333,7 +341,8 @@ public class ServerConfImpl implements ServerConfProvider {
     }
 
     @Override
-    public InternalSSLKey getSSLKey() throws Exception {
+    public InternalSSLKey getSSLKey()
+            throws UnrecoverableKeyException, CertificateException, KeyStoreException, IOException, NoSuchAlgorithmException {
         return InternalSSLKey.load();
     }
 
@@ -348,11 +357,32 @@ public class ServerConfImpl implements ServerConfProvider {
     }
 
     @Override
-    public List<String> getTspUrl() {
+    public List<String> getTspUrls() {
         return tx(session -> getConf(session).getTimestampingServices().stream()
                 .map(TimestampingService::getUrl)
                 .filter(StringUtils::isNotBlank)
-                .collect(Collectors.toList()));
+                .toList());
+    }
+
+    @Override
+    public List<String> getOrderedTspUrls() {
+        return tx(session -> {
+            CostTypePrioritizer<TimestampingService> sorter =
+                    new CostTypePrioritizer<>(getConf(session).getTimestampingServices());
+            SystemProperties.ServicePrioritizationStrategy prioritizationStrategy =
+                    SystemProperties.getTimestampingPrioritizationStrategy();
+            log.debug("Timestamping urls will be sorted based on prioritization strategy: {}", prioritizationStrategy);
+            return sorter.prioritize(prioritizationStrategy);
+        });
+    }
+
+    @Override
+    public CostType getTspCostType(String tspUrl) {
+        return tx(session -> getConf(session).getTimestampingServices().stream()
+                    .filter(t -> Strings.CS.equals(t.getUrl(), tspUrl))
+                    .findFirst()
+                    .map(TimestampingService::getCostType)
+                    .orElse(null));
     }
 
     @Override
@@ -446,7 +476,13 @@ public class ServerConfImpl implements ServerConfProvider {
         if (path == null) {
             normalizedPath = null;
         } else {
-            normalizedPath = UriUtils.uriPathPercentDecode(URI.create(path).normalize().getRawPath(), true);
+            normalizedPath = UriUtils.decodeAndNormalize(path);
+
+            // Explicitly reject any remaining traversal sequences
+            if (normalizedPath.contains("..")) {
+                log.warn("Path traversal detected in request path: {}. Access will be rejected.", path);
+                return false;
+            }
         }
         return getAclEndpoints(session, clientId, serviceId).stream()
                 .anyMatch(ep -> ep.matches(method, normalizedPath));
